--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,21 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Andrew Scott | Senior Fullstack Engineer</title>
-    <meta name="description" content="Andrew has 8 years of professional experience in software industry and brings both cutting-edge programming expertise and exceptional interpersonal skills">
+    <title>Robert Hilse | Senior Fullstack Engineer</title>
+    <meta name="description" content="Robert has 10 years of professional experience in software industry and brings both cutting-edge programming expertise and exceptional interpersonal skills">
   
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://visitskyworld.github.io/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Andrew Scott | Senior Fullstack Engineer">
-    <meta property="og:description" content="Andrew has 8 years of professional experience in software industry and brings both cutting-edge programming expertise and exceptional interpersonal skills">
-    <meta property="og:image" content="https://visitskyworld.github.io/andrew.png">
+    <meta property="og:title" content=Robert Hilse | Senior Fullstack Engineer">
+    <meta property="og:description" content="Robert has 8 years of professional experience in software industry and brings both cutting-edge programming expertise and exceptional interpersonal skills">
   
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="visitskyworld.github.io">
     <meta property="twitter:url" content="https://visitskyworld.github.io/">
-    <meta name="twitter:title" content="Andrew Scott | Senior Fullstack Engineer">
-    <meta name="twitter:description" content="Andrew has 8 years of professional experience in software industry and brings both cutting-edge programming expertise and exceptional interpersonal skills">
-    <meta name="twitter:image" content="https://visitskyworld.github.io/andrew.png">
+    <meta name="twitter:title" content=Robert Hilse | Senior Fullstack Engineer">
+    <meta name="twitter:description" content="Robert has 8 years of professional experience in software industry and brings both cutting-edge programming expertise and exceptional interpersonal skills">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -52,7 +50,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Andrew Scott | Portfolio</title>
+    <title>Robert Hilse | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
